PJKT-31 Работал над TaskList

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,6 +1,7 @@
 .sidebar {
   width: 365px;
   background: #F7F1FF;
-  padding: 20px 0;
+  /* background: chocolate; */
+  padding: 20px;
   overflow-y: auto;
 }
