--- a/src/components/SidebarMenu/SidebarMenu.css
+++ b/src/components/SidebarMenu/SidebarMenu.css
@@ -1,14 +1,4 @@
-.menu-item {
-  padding: 12px 20px;
-  cursor: pointer;
-  transition: background 0.3s;
-}
-
-.menu-item:hover {
-  background: #E4CFFF;
-}
-
-.menu-item.active {
-  color: #9747FF;
-  background: #E4CFFF;
+.sidebar-menu-container {
+  display: flex;
+  flex-direction: column;
 }
