--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,12 +1,13 @@
 .header {
   background: #fff;
   color: #434343;
-  padding: 0 20px;
   height: 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+
+  padding: 50px 50px;
 }
   
 .logo {
