--- a/src/components/SidebarUserProfile/SidebarUserProfile.css
+++ b/src/components/SidebarUserProfile/SidebarUserProfile.css
@@ -2,8 +2,9 @@
   display: flex;
   align-items: center;
   padding: 16px;
-  background-color: #f0f4ff; /* Светлый фон */
-  border-bottom: 1px solid #e0e5ee; /* Граница между профилем и меню */
+  background: white;
+  border-radius: 20px;
+  margin-bottom: 30px;
 }
 
 .avatar {
