--- a/src/components/Task/Task.css
+++ b/src/components/Task/Task.css
@@ -1,4 +1,26 @@
-.task-card {
+.task-details {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+
+  height: 100%;
+
+  /* background-color: blue; */
+}
+
+.delete-container {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+
+  width: 3rem;
+  height: 100%;
+
+  /* background-color: aqua; */
+}
+
+
+/* .task-card {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -6,30 +28,22 @@
   padding: 16px 24px;
   border-radius: 16px;
   background-color: #f5f5f5;
-  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
-}
+} */
 
-.completed {
-  background-color: #6a5af9; /* Цвет выделенной задачи */
-  color: white; /* Текст белый для лучшей читаемости */
-}
+  /* .important {
+    background-color: #6a5af9;
+    color: white;
+  } */
 
-.task-details {
-  display: flex;
-  align-items: center;
-}
 
-.checkbox-container {
-  margin-right: 16px;
-}
 
-.checkbox {
+/*.checkbox {
   width: 24px;
   height: 24px;
   border: 2px solid #6a5af9;
   border-radius: 50%;
   background-color: transparent;
-}
+} */
 
 .task-info {
   display: flex;
@@ -37,17 +51,18 @@
 }
 
 .task-title {
-  font-size: 18px;
+  font-size: 1.3rem;
   font-weight: bold;
+  
   color: #333;
 }
 
 .task-meta {
-  font-size: 14px;
+  font-size: 0.8rem;
   color: #666;
   display: flex;
   align-items: center;
-  gap: 16px;
+  gap: 1rem;
 }
 
 .time-icon,
@@ -55,16 +70,16 @@
 .folder-icon,
 .user-icon,
 .sphere-icon {
-  font-size: 16px;
-  margin-right: 4px;
+  font-size: 1rem;
+  margin-right: 0.2rem;
 }
 
-.delete-button {
-  cursor: pointer;
-  font-size: 20px;
-  color: #6a5af9;
+.avatar {
+  margin-right: 1rem;
 }
 
-.completed .delete-button {
-  color: white; /* Кнопка удаления белая для выделенной задачи */
+.avatar img {
+  width: 1.3rem;
+  height: 1.3rem;
+  border-radius: 50%;
 }
