PJKT-31 Доработал TaskList

--- a/src/components/SidebarButton/SidebarButton.css
+++ b/src/components/SidebarButton/SidebarButton.css
@@ -1,17 +1,16 @@
-.botton {
+.button {
   padding: 20px 20px;
-
-  cursor: pointer;
   border: none;
   border-radius: 20px;
+
+  cursor: pointer;
   transition: all 0.3s;
   font-weight: bold;
-
 
   background: #F7F1FF;
 }
 
-.botton:hover {
+.button:hover {
   opacity: 0.8;
   background: #E4CFFF;
 }
@@ -20,7 +19,7 @@
   cursor: not-allowed;
 }
 
-.botton.active {
+.button.active {
   color: #9747FF;
   background: #E4CFFF;
 }
