--- a/src/components/Task/Task.css
+++ b/src/components/Task/Task.css
@@ -1,11 +1,26 @@
-.task-details {
+.task-rows {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.task-title {
+  font-size: 1rem;
+  font-weight: 600;
+} 
+
+.task-data {
   display: flex;
   align-items: center;
-  flex-grow: 1;
 
-  height: 100%;
+  font-size: 0.75rem;
+  font-weight: 600;
+}
 
-  /* background-color: blue; */
+img {
+  width: 1.3rem;
+  height: 1.3rem;
+  border-radius: 50%;
 }
 
 .delete-container {
@@ -15,71 +30,4 @@
 
   width: 3rem;
   height: 100%;
-
-  /* background-color: aqua; */
-}
-
-
-/* .task-card {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  padding: 16px 24px;
-  border-radius: 16px;
-  background-color: #f5f5f5;
-} */
-
-  /* .important {
-    background-color: #6a5af9;
-    color: white;
-  } */
-
-
-
-/*.checkbox {
-  width: 24px;
-  height: 24px;
-  border: 2px solid #6a5af9;
-  border-radius: 50%;
-  background-color: transparent;
-} */
-
-.task-info {
-  display: flex;
-  flex-direction: column;
-}
-
-.task-title {
-  font-size: 1.3rem;
-  font-weight: bold;
-  
-  color: #333;
-}
-
-.task-meta {
-  font-size: 0.8rem;
-  color: #666;
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-.time-icon,
-.clock-icon,
-.folder-icon,
-.user-icon,
-.sphere-icon {
-  font-size: 1rem;
-  margin-right: 0.2rem;
-}
-
-.avatar {
-  margin-right: 1rem;
-}
-
-.avatar img {
-  width: 1.3rem;
-  height: 1.3rem;
-  border-radius: 50%;
 }
