--- a/src/components/Sidebar/SidebarButton/SidebarButton.css
+++ b/src/components/Sidebar/SidebarButton/SidebarButton.css
@@ -1,7 +1,11 @@
 .button {
-  padding: 20px 20px;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+
+  padding: 1.25rem 1.25rem;
   border: none;
-  border-radius: 20px;
+  border-radius: 1.25rem;
 
   cursor: pointer;
   transition: all 0.3s;
